--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "cpp-test",
   "version": "1.0.0",
   "scripts": {
-    "test:all": "ts-node index.ts"
+    "start": "ts-node index.ts"
   },
   "author": "",
   "private": true,
   "license": "ISC",
   "devDependencies": {
+    "@types/adm-zip": "^0.5.0",
+    "@types/glob": "^8.0.0",
+    "@types/jest": "^29.0.3",
+    "jest": "^29.0.3",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1"
   },
-  "os": [
-    "Mac"
-  ]
+  "dependencies": {
+    "adm-zip": "^0.5.9",
+    "glob": "^8.0.3",
+    "ts-try-catch-wrap": "^1.0.0"
+  }
 }
