--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cpp-test",
   "version": "1.0.0",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "single-test": "ts-node test.ts"
   },
   "author": "",
   "private": true,
